--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,10 +17,48 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a
+            routerLinkActive="active"
+            routerLink="/home"
+            class="nav-link active"
+            aria-current="page"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a
+            routerLinkActive="active"
+            routerLink="/ticket"
+            class="nav-link active"
+            aria-current="page"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            >Billet</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            routerLinkActive="active"
+            routerLink="/home"
+            class="nav-link active"
+            aria-current="page"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            >Pakkeliste</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            routerLinkActive="active"
+            routerLink="/contact"
+            class="nav-link active"
+            aria-current="page"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            >Kontakt</a
+          >
         </li>
       </ul>
     </div>
