--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
       Torsdag den 13. til søndag den 16. Juli løber Skodfest 2023 af staben!
       Skal du med?
     </p>
-    <button type="button" class="btn btn-lg buy-btn" (click)="buy()">
+    <button type="button" class="btn btn-lg buy-btn" routerLink="/ticket">
       KØB BILLET
     </button>
   </div>
