--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,10 @@ h5,
 h6 {
   font-family: "Anton", sans-serif;
 }
+h1 {
+  color: #ff5d00;
+  text-shadow: 1px 1px 0 #6b2700;
+}
 body {
   height: 100%;
 }
