adds ticket page and changes favi

--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,1 +1,41 @@
-<p>ticket works!</p>
+<div class="container ticket-container">
+  <div class="title-container">
+    <h1>Køb din #skodfest billet her</h1>
+    <p>
+      <span>
+        Du skal bruge en billet for at deltage i Skodfest, billetternes pris er
+        ikke sat efter at lave overskud, men for at dække omkostningerne af
+        arrangementet.
+      </span>
+    </p>
+  </div>
+  <div class="ticket-cards-container">
+    <ng-container>
+      <div class="card text-center mb-3" style="width: 18rem">
+        <div class="card-body">
+          <h5 class="card-title">Partoutbillet</h5>
+          <p class="card-text">
+            Ved køb af partoutbillet kan du deltage i Skodfest alle dage mad er
+            inkluderet. Øl, vin, evt. aktiviteter mm. er ikke inkluderet i
+            prisen
+          </p>
+          <p><i>500,00 kr.</i></p>
+          <a href="#" class="btn buy-btn">KØB PARTOUTBILLET</a>
+        </div>
+      </div>
+    </ng-container>
+    <ng-container>
+      <div class="card text-center mb-3" style="width: 18rem">
+        <div class="card-body">
+          <h5 class="card-title">Dagsbillet</h5>
+          <p class="card-text">
+            Ved køb af dagsbillet til Skodfest kan du deltage en dag. 1
+            morgenmad, 1 frokost og 1 aftensmad er inkluderet.
+          </p>
+          <p><i>300,00 kr.</i></p>
+          <a href="#" class="btn buy-btn">KØB DAGSBILLET</a>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+</div>
