finished first version for mobile

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,30 @@
-<p>contact works!</p>
+<div class="container contact-container">
+  <div class="title-container">
+    <h1>Du velkommen til at hive fat i os</h1>
+    <p>
+      Vi vil altid gerne høre din mening, hjælpe dig med dine problemer eller
+      andet.
+    </p>
+  </div>
+  <div class="mail-container">
+    <a href="mailto:hej@skodfest.dk">
+      <button class="btn buy-btn">Send en mail</button>
+    </a>
+    hej@skodfest.dk
+  </div>
+
+  <div class="socials-container">
+    <h4>Eller fang os på de sociale medier:</h4>
+    <div class="icon-row">
+      <a href=""
+        ><img src="assets/images/icons/facebook.png" width="40" alt=""
+      /></a>
+      <a href=""
+        ><img src="assets/images/icons/instagram.png" width="40" alt=""
+      /></a>
+      <a href=""
+        ><img src="assets/images/icons/messenger.png" width="40" alt=""
+      /></a>
+    </div>
+  </div>
+</div>
