--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,6 @@
 :host {
-  height: 100%;
+  display: flex;
+  flex: 1;
 }
 
 .call-to-action {
@@ -15,22 +16,13 @@
   }
 }
 
-.buy-btn {
-  background-color: #ff5d00;
-  border-radius: 0;
-  font-weight: bold;
-  color: white;
-  padding: 1rem 2rem;
-  transform: skew(-10deg);
-}
-
 .home-page-container {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 0;
+  padding: 1rem 0 3rem 0;
 }
 
 .title {
