--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
     <h1 class="fs-1">SKODFEST 2023</h1>
   </div>
   <div class="instagram">
-    <div id="carouselExample" class="carousel slide">
+    <div id="instaCarousel" class="carousel slide">
       <div class="carousel-inner">
         <ng-container>
           <div *ngFor="let image of images" class="carousel-item active">
@@ -24,7 +24,7 @@
       <button
         class="carousel-control-prev"
         type="button"
-        data-bs-target="#carouselExample"
+        data-bs-target="#instaCarousel"
         data-bs-slide="prev"
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -33,7 +33,7 @@
       <button
         class="carousel-control-next"
         type="button"
-        data-bs-target="#carouselExample"
+        data-bs-target="#instaCarousel"
         data-bs-slide="next"
       >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
