--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
           <a
             routerLinkActive="active"
             routerLink="/home"
-            class="nav-link active"
+            class="nav-link"
             aria-current="page"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -31,7 +31,7 @@
           <a
             routerLinkActive="active"
             routerLink="/ticket"
-            class="nav-link active"
+            class="nav-link"
             aria-current="page"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -41,8 +41,8 @@
         <li class="nav-item">
           <a
             routerLinkActive="active"
-            routerLink="/home"
-            class="nav-link active"
+            routerLink="/packinglist"
+            class="nav-link"
             aria-current="page"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -53,7 +53,7 @@
           <a
             routerLinkActive="active"
             routerLink="/contact"
-            class="nav-link active"
+            class="nav-link"
             aria-current="page"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
