adds sticky header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<navbar></navbar>
-<router-outlet></router-outlet>
+<div class="header-container">
+  <navbar></navbar>
+</div>
+<div class="body-container">
+  <router-outlet></router-outlet>
+</div>
