--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,11 +44,12 @@
 
   <div class="call-to-action">
     <p>
-      Torsdag den 13. til søndag den 16. Juli løber Skodfest 2023 af staben!
+      Torsdag den 13. til søndag den 16. Juli løber Skodfest 2023 af stablen!
       Skal du med?
     </p>
     <button type="button" class="btn btn-lg buy-btn" routerLink="/ticket">
       KØB BILLET
     </button>
+    <button class="btn btn-sm"><b>+</b> Føj til kalender</button>
   </div>
 </div>
