--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,13 @@
   height: 100%;
   display: flex;
   flex-flow: column;
-  flex: 1;
   flex-direction: column;
+}
+
+.header-container {
+  min-height: 62px;
+}
+
+.body-container {
+  flex: 1;
 }
