adds generated cart

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,19 +10,20 @@
     <a href="mailto:hej@skodfest.dk">
       <button class="btn buy-btn">Send en mail</button>
     </a>
-    hej@skodfest.dk
+    <br />
+    <p>hej@skodfest.dk</p>
   </div>
 
   <div class="socials-container">
     <h4>Eller fang os på de sociale medier:</h4>
     <div class="icon-row">
-      <a href=""
+      <a href="https://facebook.com/skodfest" target="_blank"
         ><img src="assets/images/icons/facebook.png" width="40" alt=""
       /></a>
-      <a href=""
+      <a href="https://instagram.com/skodfest" target="_blank"
         ><img src="assets/images/icons/instagram.png" width="40" alt=""
       /></a>
-      <a href=""
+      <a href="https://messenger.com/skodfest" target="_blank"
         ><img src="assets/images/icons/messenger.png" width="40" alt=""
       /></a>
     </div>
