--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,9 +11,17 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">
-      <img src="assets/images/favi.png" width="35" alt="skodfest_logo" />
-    </a>
+    <div class="icon-container">
+      <a class="navbar-brand" routerLink="/contact"
+        ><div class="bg-orange-circle">@</div></a
+      >
+      <a class="navbar-brand" routerLink="/cart">
+        <img src="assets/images/cart.png" width="35" alt="cart" />
+      </a>
+      <a class="navbar-brand" routerLink="/">
+        <img src="assets/images/favi.png" width="35" alt="skodfest_logo" />
+      </a>
+    </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -58,6 +66,17 @@
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
             >Kontakt</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            routerLinkActive="active"
+            routerLink="/cart"
+            class="nav-link"
+            aria-current="page"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            >Indkøbskurv</a
           >
         </li>
       </ul>
