--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -3,6 +3,7 @@
   position: fixed;
   width: 100%;
   background-color: #fff;
+  z-index: 999;
 }
 
 .navbar-toggler {
@@ -10,4 +11,18 @@
   &:focus {
     box-shadow: none;
   }
+}
+
+.bg-orange-circle {
+  display: flex;
+  justify-content: center;
+  background-color: #ff5d00;
+  color: #fff;
+  border-radius: 2000px;
+  width: 35px;
+  height: 35px;
+}
+
+.icon-container {
+  display: flex;
 }
