--- a/src/app/packinglist/packinglist.component.scss
+++ b/src/app/packinglist/packinglist.component.scss
@@ -3,6 +3,18 @@
   flex: 1;
 }
 
+.packinglist-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-items: center;
+  width: 100%;
+  img {
+    max-height: 600px;
+    object-fit: cover;
+  }
+}
+
 .checklist-container {
   padding: 1rem;
 }
