adds logic and checklist

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -43,7 +43,7 @@
             aria-current="page"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
-            >Billet</a
+            >Billetter</a
           >
         </li>
         <li class="nav-item">
