--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,4 +1,4 @@
-<div class="container ticket-container">
+<div class="ticket-container">
   <div class="title-container">
     <h1>Køb din #skodfest billet her</h1>
     <p>
