--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -10,6 +10,6 @@
     <span>Total</span> <span>Kr. {{ totalPrice | number : ".2" }} </span>
   </div>
   <div class="checkout-container pt-5">
-    <button class="btn buy-btn">Gå til betaling</button>
+    <a href=""><button class="btn buy-btn">Gå til betaling</button></a>
   </div>
 </div>
