--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,10 @@
     <div id="instaCarousel" class="carousel slide">
       <div class="carousel-inner">
         <ng-container>
-          <div *ngFor="let image of images" class="carousel-item active">
+          <div
+            *ngFor="let image of images; let idx = index"
+            class="carousel-item {{ idx == 0 ? 'active' : '' }}"
+          >
             <img
               src="{{ image.url }}"
               class="d-block w-100"
