adds products in cart counter

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,8 +57,7 @@
       target="_blank"
       href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20230713T040000Z%2F20230715T220000Z&details=Skodfest%2C%20Danmarks%20m%C3%A5ske%20mest%20skod%20festival%21&location=Birkes%C3%B8vej%2C%207850%20Stoholm%20J&text=Skodfest%202023"
     >
-      <b>📅</b> Google Calendar</a
+      <b>📅</b> Føj til Google Calendar</a
     >
-    <a href="../../assets/skodfest2023.ics"><b>📅</b> Apple Calendar</a>
   </div>
 </div>
