--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -40,8 +40,8 @@
       >
       <span aria-hidden="true" (click)="closeToast()">&times;</span>
     </div>
-    <div>
-      <button routerLink="/cart" class="btn">
+    <div class="p-3 d-flex justify-content-center">
+      <button routerLink="/cart" class="btn btn-secondary text-lg-center">
         Gå til kurven for at betale!
       </button>
     </div>
