--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -31,9 +31,15 @@ a {
 }
 
 .title {
+  padding-top: 2rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+
+  img {
+    width: 3rem;
+    margin-right: 1rem;
+  }
 }
 
 .instagram {
