--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,10 @@ h1 {
   padding: 1rem 2rem;
   transform: skew(-10deg);
 }
+
+.btn-orange {
+  color: white;
+  background-color: #ff5d00;
+  border-radius: 0;
+  transform: skew(-10deg);
+}
