--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="header-container">
   <navbar></navbar>
 </div>
-<div class="body-container">
-  <router-outlet></router-outlet>
+<div
+  class="body-container"
+  [@routeAnimations]="
+    o && o.activatedRouteData && o.activatedRouteData['animation']
+  "
+>
+  <router-outlet #o="outlet"></router-outlet>
 </div>
