--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,6 +4,8 @@
   width: 100%;
   background-color: #fff;
   z-index: 999;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 
 .navbar-toggler {
