--- a/src/app/ticket/ticket.component.scss
+++ b/src/app/ticket/ticket.component.scss
@@ -21,6 +21,7 @@
 
 .ticket-cards-container {
   padding: 2rem;
+  padding-bottom: 100px;
 }
 
 .card {
@@ -35,5 +36,21 @@
 
 .toast {
   position: fixed;
-  top: 50%;
+}
+
+.bottom-modal {
+  box-shadow: 0px 0px 10px 0px #ccc;
+  width: 100%;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+  padding: 2rem;
+  padding-bottom: 1rem;
+  bottom: 0;
+  position: fixed;
+  transition: all 250ms ease-in-out;
+  background-color: white;
+
+  &.hide {
+    transform: translateY(100%);
+  }
 }
