adds new modals

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -38,3 +38,12 @@
   </div>
   <button class="mt-3 btn buy-btn" type="submit">KØB NU</button>
 </form>
+
+<div class="bottom-modal hide" #bottomModal>
+  <div class="toast-header">
+    <strong class="mr-auto">Din ordre er blevet bestilt!</strong>
+  </div>
+  <div class="p-3">
+    Overfør {{ totalPrice }} til <b>2252 3620</b> (Sigurd) på MobilePay
+  </div>
+</div>
