--- a/src/app/checkout/checkout.component.scss
+++ b/src/app/checkout/checkout.component.scss
@@ -10,3 +10,20 @@ form {
   flex-direction: column;
   align-items: center;
 }
+
+.bottom-modal {
+  box-shadow: 0px 0px 10px 0px #ccc;
+  width: 100%;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+  padding: 2rem;
+  padding-bottom: 1rem;
+  bottom: 0;
+  position: fixed;
+  transition: all 250ms ease-in-out;
+  background-color: white;
+
+  &.hide {
+    transform: translateY(100%);
+  }
+}
