adds products page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -38,6 +38,17 @@
         <li class="nav-item">
           <a
             routerLinkActive="active"
+            routerLink="/products"
+            class="nav-link"
+            aria-current="page"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            >Alle produkter</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            routerLinkActive="active"
             routerLink="/packinglist"
             class="nav-link"
             aria-current="page"
