fixes small things

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -44,6 +44,6 @@
     <strong class="mr-auto">Din ordre er blevet bestilt!</strong>
   </div>
   <div class="p-3">
-    Overfør {{ totalPrice }} til <b>2252 3620</b> (Sigurd) på MobilePay
+    Overfør {{ totalPrice }} kr. til <b>2252 3620</b> (Sigurd) på MobilePay
   </div>
 </div>
