--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -14,8 +14,13 @@
       </div>
     </ng-container>
     <ng-template #noProductsInCart>
-      <div class="product px-3 py-5 justify-content-center">
+      <div
+        class="product px-3 py-5 justify-content-center flex-column text-center"
+      >
         <h6>Ingen produkter i din kurv lige nu...</h6>
+        <button class="btn btn-orange mt-3" routerLink="/products">
+          Find noget til kurven
+        </button>
       </div>
     </ng-template>
   </div>
