adds upsale component

--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,3 +1,11 @@
+<app-popup
+  [display]="showPopup"
+  title="Noget til ganen?"
+  [displayProduct]="upsaleProduct"
+  (close)="closePopup()"
+  (addProduct)="addUpsaleProductToCart()"
+>
+</app-popup>
 <div class="ticket-container">
   <div class="title-container">
     <h1>Køb din #skodfest billet her</h1>
